[package]
name = "dandelion"
version = "0.1.0"
edition = "2021"
description = "Steganographic file distributor for Ethereum/EVM networks"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/dandelion"

[[bin]]
name = "dandelion"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Ethereum/EVM interaction
ethers = { version = "2.0", features = ["ws"] }
alloy = { version = "0.1", features = ["full"] }

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# File handling
hex = "0.4"
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress indicators
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.8"
